Carga de elemento en VBox

--- a/src/main/resources/com/example/javafx_menu_cambio_contenido/principal.fxml
+++ b/src/main/resources/com/example/javafx_menu_cambio_contenido/principal.fxml
@@ -5,17 +5,19 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafx_menu_cambio_contenido.principalController">
+<VBox fx:id="vbPrincipal" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.javafx_menu_cambio_contenido.principalController">
    <children>
       <MenuBar>
         <menus>
-          <Menu mnemonicParsing="false" text="pedidos" />
             <Menu mnemonicParsing="false" text="productos">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
               </items>
             </Menu>
+          <Menu mnemonicParsing="false" text="Productos">
+               <items>
+                  <MenuItem fx:id="miGestionProductos" mnemonicParsing="false" onAction="#onGestionProductosAction" text="Gestion de productos" />
+               </items></Menu>
         </menus>
       </MenuBar>
    </children>
